--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>ikkje et virus</title>
+<link rel="stylesheet" href=""
 <style>
 @keyframes farge {
 0% {background-color: rgb(255, 255, 255);}
